--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
-  "name": "stopImmediatePropagation",
-  "description": "Polyfill for missing Event#stopImmediatePropagation support on older browsers.",
-  "version": "0.1.0",
-  "main": "lib/stopImmediatePropagation.js",
-  "license": "MIT"
+	"name": "stopImmediatePropagation",
+	"description": "Polyfill for missing Event#stopImmediatePropagation support on older browsers.",
+	"version": "0.1.0",
+	"main": "lib/stopImmediatePropagation.js",
+	"repositories": [
+		{
+			"type": "git",
+			"url": "git://github.com/mattcg/stopImmediatePropagation.git"
+		}
+	],
+	"contributors": [
+		{
+			"name": "Matthew Caruana Galizia",
+			"email": "m@m.cg"
+		}
+	],
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "http://opensource.org/licenses/MIT"
+		}
+	]
 }
