--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 	],
 	"licenses": [
 		{
-			"type": "MIT",
-			"url": "http://opensource.org/licenses/MIT"
+			"type": "Creative Commons Attribution 3.0 Unported (CC BY 3.0)",
+			"url": "http://creativecommons.org/licenses/by/3.0/legalcode"
 		}
 	]
 }
