Conform to CommonJS/Modules/1.0

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"description": "Polyfill for missing Event#stopImmediatePropagation support on older browsers.",
 	"version": "0.1.0",
 	"main": "lib/stopImmediatePropagation.js",
+	"implements": ["CommonJS/Modules/1.0"],
 	"repositories": [
 		{
 			"type": "git",
