--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "stopimmediatepropagation",
 	"description": "Polyfill for missing Event#stopImmediatePropagation support on older browsers.",
 	"version": "0.1.0",
+	"homepage": "https://github.com/mattcg/stopImmediatePropagation",
 	"main": "lib/stopImmediatePropagation.js",
 	"implements": ["CommonJS/Modules/1.0"],
 	"repositories": [
